# Locust

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  bot.py  cargo.toml  config.py  main.py  main.rs  package-lock.json  package.json  requirements.txt  tsconfig.json
MISC/: clear-global-commands.ts  clear-guild-commands.ts
botMain/: dependencies.py  main.py
botMain/Class/: CommandHandler.py  ErrorHandler.py  MainClass.py  SyncHandler.py
cogs/: ai_cog.py  anti_raid.py  basic.py  example.py  filter_cog.py  leveling.py  lovcalc.py  marketplace.py  moderation.py  modlogs.py  ping.py  purge.py  roblox.py  starboard.py  tickets.py  urban_cog.py
cogs/utils/: duration_parser.py
commands/ai/: chat.py
commands/basic/: ping.py
commands/fun/: lovecalc.py
commands/leveling/: rank.py
commands/marketplace/: post.py
commands/moderation/: filter.py  purge.py  raid.py  setup.py
commands/music/: control.py  play.py  queue.py
commands/starboard/: setup.py
commands/tickets/: setup.py
commands/utility/: roblox.py  urban.py
core/: bot.py  database.py  events.py
data/: starboard.json  warnings.json
src/: bot.rs  config.rs  deploy-commands.ts  index.ts  main.rs
src/ai/: intents.rs  mod.rs
src/commands/: mod.rs
systems/: base_system.py
systems/ai/: __init__.py  processor.py  storage.py
systems/basic/: __init__.py
systems/fun/: __init__.py  lovecalc.py
systems/leveling/: __init__.py  processor.py  renderer.py  rewards.py  storage.py
systems/marketplace/: __init__.py  processor.py  renderer.py  storage.py
systems/moderation/: __init__.py  anti_raid.py  anti_spam.py  filter.py  punishment.py  purge.py
systems/music/: __init__.py  player.py  queue.py
utils/: command_loader.py  embed_builder.py  migration_manager.py
(+18 files in other folders)
